; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_save_context_hotkeys.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-hotkey.c_save_context_hotkeys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_context_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@enum_save_hotkey = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.obs_context_data*)* @save_context_hotkeys to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @save_context_hotkeys(%struct.obs_context_data* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.obs_context_data*, align 8
  %4 = alloca i32*, align 8
  store %struct.obs_context_data* %0, %struct.obs_context_data** %3, align 8
  %5 = load %struct.obs_context_data*, %struct.obs_context_data** %3, align 8
  %6 = getelementptr inbounds %struct.obs_context_data, %struct.obs_context_data* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %18

11:                                               ; preds = %1
  %12 = call i32* (...) @obs_data_create()
  store i32* %12, i32** %4, align 8
  %13 = load %struct.obs_context_data*, %struct.obs_context_data** %3, align 8
  %14 = load i32, i32* @enum_save_hotkey, align 4
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @enum_context_hotkeys(%struct.obs_context_data* %13, i32 %14, i32* %15)
  %17 = load i32*, i32** %4, align 8
  store i32* %17, i32** %2, align 8
  br label %18

18:                                               ; preds = %11, %10
  %19 = load i32*, i32** %2, align 8
  ret i32* %19
}

declare dso_local i32* @obs_data_create(...) #1

declare dso_local i32 @enum_context_hotkeys(%struct.obs_context_data*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
